--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark nav1">
             <div class="container-fluid justify-content-center">
               <span class="navbar-brand mb-0 h1">Weather Dashboard</span>
             </div>
@@ -18,7 +18,12 @@
         
        <div class="container">
            <div class="row">
-               <aside class="col-sm-3"></aside>
+               <aside class="col-sm-3">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Search City" aria-label="Recipient's username" aria-describedby="button-addon2" list="datalistOptions" id="data-list">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                  </div>
+               </aside>
                <main class="col-sm-9"></main>
            </div>
            
