added id to input

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            <div class="row">
                <aside class="col-sm-3">
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Search City" aria-label="Recipient's username" aria-describedby="button-addon2" list="datalistOptions" id="data-list">
+                    <input type="text" class="form-control" placeholder="Search City" aria-label="saved city" aria-describedby="button-addon2" list="datalistOptions" id="data-list">
                     <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
                   </div>
                </aside>
