--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Search City" aria-label="saved city" aria-describedby="button-addon2" list="datalistOptions" id="data-list">
                     <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                    <div class="list-group" id="save">
+                      </div>
                   </div>
                </aside>
                <main class="col-sm-10"></main>
